--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 	<h1>Welcome to my page!</h1>
-	<iframe src="https://vk.cc/cmOM1U"></iframe>
+	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQkwlAq9cEPEveny_kSJsYS1zGvAh32_81JJvHAu0aMCmVgkuHJPWGPYAtpu58aUvNGmVHjoA5xbX3Z/pubhtml#"></iframe>
 </body>
 </html>
